src/draw/include/scav/scav_draw_c.h

/* NOLINTBEGIN(modernize-use-using, readability-identifier-naming) --
 * `typedef` is the C spelling, and a handle's tag is its ABI name. */

typedef struct scav_metrics scav_metrics;
typedef struct scav_images scav_images;
typedef struct scav_drawlist scav_drawlist;
/* What a primitive is. `points` and the two scalars are fixed per kind, so a
 * backend switches once and never guesses. */
enum {
  SCAV_PRIM_RECT = 0,     /* 2 points: opposite corners */
  SCAV_PRIM_RRECT = 1,    /* 2 points, a = corner radius */
  SCAV_PRIM_LINE = 2,     /* 2 points */
  SCAV_PRIM_POLYLINE = 3, /* N >= 2 points, open */
  SCAV_PRIM_PATH = 4,     /* N >= 2 points, closed */
  SCAV_PRIM_TEXT = 5,     /* 1 point: baseline origin; payload = the string */
  SCAV_PRIM_CIRCLE = 6,   /* 1 point: centre, a = radius */
  SCAV_PRIM_ARC = 7,      /* 2 points as rect, a/b = start/sweep, 1/64 degree */
  SCAV_PRIM_IMAGE = 8,    /* 2 points, payload = a registered image id */
  SCAV_PRIM_KIND_COUNT = 9
};
/* Interned; primitives index a style table. 20 bytes, no padding. */
typedef struct {
  uint32_t stroke_rgba;
  uint32_t fill_rgba;
  int32_t stroke_w;       /* grid units */
  uint32_t dash;          /* 0 = solid; app-defined otherwise */
  int32_t font_size_grid; /* 1/16 pt, the same width as everywhere else */
} scav_style;
/* Draw order is `depth`, not array position, which is what makes a DrawList
 * appendable. 48 bytes, no padding. */
typedef struct {
  uint32_t kind; /* one of SCAV_PRIM_* */
  int32_t depth;
  uint32_t style;       /* -> the style table */
  uint32_t clip;        /* -> the clip table; SCAV_CLIP_NONE = unclipped */
  uint32_t origin_kind; /* the defining entity, or none */
  uint32_t origin_ordinal;
  scav_span points;  /* -> the point array; meaning per kind */
  scav_span payload; /* -> the text pool: a string, or an image id */
  int32_t a, b;      /* kind-specific scalars */
} scav_prim;
/* An unclipped primitive names no clip rect. A macro, not an enumerator: an
 * unnamed C enum takes an implementation-chosen underlying type, and under the
 * MS ABI that is `int`, which makes this value -1 on one platform and
 * 4294967295 on the others. */
#define SCAV_CLIP_NONE 0xFFFFFFFFU
/* The palette `scav_emit_chart` wants, in this order. */
enum {
  SCAV_STYLE_STATE = 0,  /* state box outline and fill */
  SCAV_STYLE_SUB = 1,    /* submachine divider */
  SCAV_STYLE_ROUTE = 2,  /* transition polyline */
  SCAV_STYLE_TITLE = 3,  /* state name */
  SCAV_STYLE_LABEL = 4,  /* transition label */
  SCAV_STYLE_PSEUDO = 5, /* initial, final, choice, fork, join, history */
  /* The arrowhead, which is a filled glyph and not a stroked one. Its own row
   * because a stroke on a closed fill inflates it by half the width all round
   * and spikes at the tip by the miter: at 16 units and a 53-degree head that
   * is 18 units past the border the tip was aimed at. A caller restyling the
   * route now says what the head touching the border should look like rather
   * than inheriting a stroke the polyline needed. */
  SCAV_STYLE_ARROW = 6,
  SCAV_STYLE_COUNT = 7
};