src/core/include/scav/scav_core_c.h

/* C's naming convention, not the model's CamelCase. */
/* NOLINTBEGIN(readability-identifier-naming) */
enum {
  SCAV_OK = 0,
  SCAV_E_INVALID_ARG = -1, /* a null out-param, or an index out of range */
  SCAV_E_STATE = -2,       /* the call does not apply in the handle's state */
  SCAV_E_CAPACITY = -3,    /* buffer too small; the required count was written */
  SCAV_E_LOAD = -4,        /* the load reported diagnostics; read them */
  SCAV_E_LAYOUT = -5,      /* layout reported diagnostics; read scav_chart_diag */
  SCAV_E_FONT = -6,        /* the font is missing a table, or its tables disagree */
  SCAV_E_NO_GLYPH = -7,    /* the font has no glyph for a codepoint measured */
  SCAV_E_DRAWLIST = -8,    /* a primitive contradicts its own kind */
  SCAV_E_ABI = -9          /* a caller-owned struct or row's size disagrees
                            * with this library's */
};
/* NOLINTBEGIN(modernize-use-using, readability-identifier-naming) --
 * `typedef` is the C spelling, and a handle's tag is its ABI name. */
typedef struct scav_load scav_load;
typedef struct scav_chart scav_chart;
/* 16 bytes, no padding. `from_doc` is a DocId: pending is reported before
 * anything is instantiated, and a file included N times is fetched once.
 * `stmt_row` indexes the statements of that document. Not spelled `from`,
 * because that is a keyword in Python and several other binding languages, and
 * a field no binding can name as an attribute is a field with a permanent
 * wart. */
typedef struct {
  scav_span path;
  uint32_t from_doc;
  uint32_t stmt_row;
} scav_pending;
/* A finding from an operation on an existing chart. A producer running before
 * entities exist fills (doc, off, len); one after fills the subject. 24 bytes. */
/* NOLINTNEXTLINE(modernize-use-using) */
typedef struct {
  uint32_t code; /* scav_diag_message renders it */
  uint32_t subject_kind;
  uint32_t subject_ordinal;
  uint32_t doc;
  uint32_t off, len;
} scav_diag;
/* NOLINTNEXTLINE(modernize-use-using) */
typedef uint32_t scav_column_id;