src/layout/include/scav/scav_layout_c.h

/* NOLINTBEGIN(modernize-use-using, readability-identifier-naming) --
 * `typedef` is the C spelling, and an ABI type's tag is its name. */

typedef uint32_t scav_router_id;
/* Interior space a state or submachine box must make room for; all-zero
 * requests nothing. */
typedef struct {
  int32_t min_w;    /* interior at least this wide */
  int32_t h_before; /* height reserved before the packed-submachine area */
  int32_t h_after;  /* ... after */
} scav_box_space;
/* Route shortening at each end, for arrowheads and terminal glyphs. */
typedef struct {
  int32_t src, dst;
} scav_path_clear;
/* A rect layout slides along `subject`'s route. */
typedef struct {
  uint32_t subject; /* TransId ordinal */
  int32_t w, h;
  uint32_t order; /* position among the subject's boxes; unique per subject */
} scav_path_box;
/* The app owns every array; scav only reads. Box and clear counts match their
 * entity array or are zero; path boxes are 0..N per transition.
 *
 * Each table states the stride it was filled at, so four caller-owned row
 * layouts are declared by one struct rather than by eight more parameters on
 * the two entry points that read it. A stride is an ABI fact and not a layout
 * input -- nothing hashes one -- and each is checked against sizeof whether or
 * not its count is zero, so a member a caller's header does not have reads as
 * zero and is refused. On LP64 the four land in the padding the
 * pointer-and-count pairs left behind, so the struct is the size it always was
 * and this ABI now has no padding anywhere. */
typedef struct {
  scav_box_space const *box_state;
  uint32_t n_box_state;
  uint32_t box_state_stride;
  scav_box_space const *box_sub;
  uint32_t n_box_sub;
  uint32_t box_sub_stride;
  scav_path_clear const *path_clear;
  uint32_t n_path_clear;
  uint32_t path_clear_stride;
  scav_path_box const *path_box;
  uint32_t n_path_box;
  uint32_t path_box_stride;
} scav_spaces;
/* Every knob layout reads, flat int32 with no padding, so the bytes hash into
 * a golden directly. Each field's bound rides it; validate rejects the rest. */
typedef struct {
  int32_t profile_id;      /* [0, INT32_MAX] */
  int32_t profile_version; /* [1, INT32_MAX] */

  int32_t pad; /* a box's interior ring only; [0, COORD_MAX/4] */

  /* Gaps between two things, as against `pad`, which is inside one thing.
   * [0, COORD_MAX/4] each. */
  int32_t rank_sep; /* adjacent ranks, along the layering axis */
  int32_t node_sep; /* adjacent nodes within one rank */
  int32_t sub_sep;  /* packed sibling submachines */

  int32_t font_size_grid;    /* 1/16 pt units; [1, COORD_MAX/4] */
  int32_t line_height_k_num; /* [1, 1024] */
  int32_t line_height_k_den; /* [1, 1024] */

  /* Min extents by StateKind ordinal; fork/join wide and thin. [0, COORD_MAX/4] */
  int32_t kind_min_w[9];
  int32_t kind_min_h[9];

  int32_t dar_num; /* desired aspect ratio as a pair; each [1, 1024] */
  int32_t dar_den;
  int32_t trybox;      /* 1 = evaluate the box packer alongside; [0, 1] */
  int32_t sm_tiebreak; /* 0 = area then aspect, 1 = reversed; [0, 1] */

  /* Tier-2 weights, highest to lowest; each [0, 1024], which keeps the summed
   * cost inside int64. */
  int32_t w_bends;
  int32_t w_corridor;
  int32_t w_crossings;
  int32_t w_excess_len;
  int32_t w_adjacency;
  int32_t w_label;
  int32_t w_label_near; /* [0, 1024] */
  int32_t w_aspect;
  int32_t w_area;

  int32_t portfolio_k;                 /* bounded moves scored; [0, 64] */
  int32_t portfolio_m;                 /* chart-global phase-2 tuples; [1, 16] */
  int32_t sweep_count;                 /* [0, 1024] */
  int32_t congestion_iterations;       /* [0, 1024] */
  int32_t ripup_cap;                   /* [0, 1024] */
  int32_t spacing_inflation_cap;       /* [0, 1024] */
  int32_t spacing_inflation_increment; /* [0, COORD_MAX/4] */

  int32_t print_columns; /* the printer's line-break budget; [20, 4096] */
} scav_profile;
/* One row of the portslot geometry column: a port's coordinate, which side of
 * its boundary rect it sits on (0 left, 1 right, 2 top, 3 bottom), and how
 * many state borders enclose that boundary. */
typedef struct {
  int32_t x, y;
  uint32_t side;
  uint32_t boundary_depth;
} scav_port_slot;
typedef struct {
  scav_profile profile;
  scav_router_id router;
  /* Workers over the sharded phases; 0 means 1, any value is legal, and none
   * of them reaches the output. */
  uint32_t threads;
} scav_layout_opts;