bindings/python/scav/_abi.py

"""Generated by tools/gen_bindings.py from abi/scav_abi.json. Do not edit.

The low-level layer: one ctypes declaration per ABI entity, with every struct's
size and alignment asserted against what the C toolchain measured. An assertion
here failing means the loaded library is not the one this file was generated
from, which is a better failure than a silent misread.
"""

import ctypes
from pathlib import Path


class ScavError(RuntimeError):
    """A non-zero scav_result, carrying its code."""

    def __init__(self, code: int, call: str) -> None:
        super().__init__(f"{call} failed: {ERROR_NAMES.get(code, code)}")
        self.code = code
        self.call = call


def check(code: int, call: str) -> int:
    if code < 0:
        raise ScavError(code, call)
    return code


# Opaque handles. Distinct types on purpose: passing one where another
# belongs is a TypeError rather than a segfault.
class scav_load(ctypes.Structure):
    pass

class scav_chart(ctypes.Structure):
    pass

class scav_metrics(ctypes.Structure):
    pass

class scav_images(ctypes.Structure):
    pass

class scav_drawlist(ctypes.Structure):
    pass

SCAV_OK = 0
SCAV_E_INVALID_ARG = -1
SCAV_E_STATE = -2
SCAV_E_CAPACITY = -3
SCAV_E_LOAD = -4
SCAV_E_LAYOUT = -5
SCAV_E_FONT = -6
SCAV_E_NO_GLYPH = -7
SCAV_E_DRAWLIST = -8
SCAV_PRIM_RECT = 0
SCAV_PRIM_RRECT = 1
SCAV_PRIM_LINE = 2
SCAV_PRIM_POLYLINE = 3
SCAV_PRIM_PATH = 4
SCAV_PRIM_TEXT = 5
SCAV_PRIM_CIRCLE = 6
SCAV_PRIM_ARC = 7
SCAV_PRIM_IMAGE = 8
SCAV_PRIM_KIND_COUNT = 9
SCAV_STYLE_STATE = 0
SCAV_STYLE_SUB = 1
SCAV_STYLE_ROUTE = 2
SCAV_STYLE_TITLE = 3
SCAV_STYLE_LABEL = 4
SCAV_STYLE_PSEUDO = 5
SCAV_STYLE_COUNT = 6
SCAV_CLIP_NONE = 4294967295

ERROR_NAMES = {
    0: "SCAV_OK",
    -1: "SCAV_E_INVALID_ARG",
    -2: "SCAV_E_STATE",
    -3: "SCAV_E_CAPACITY",
    -4: "SCAV_E_LOAD",
    -5: "SCAV_E_LAYOUT",
    -6: "SCAV_E_FONT",
    -7: "SCAV_E_NO_GLYPH",
    -8: "SCAV_E_DRAWLIST",
}

scav_byte = ctypes.c_ubyte
scav_result = ctypes.c_int32
scav_column_id = ctypes.c_uint32
scav_router_id = ctypes.c_uint32

class scav_span(ctypes.Structure):
    _fields_ = [
        ("off", ctypes.c_uint32),
        ("len", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_span) == 8, "scav_span is not 8 bytes"
assert ctypes.alignment(scav_span) == 4
assert getattr(scav_span, "off").offset == 0
assert getattr(scav_span, "len").offset == 4

class scav_point(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_int32),
        ("y", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_point) == 8, "scav_point is not 8 bytes"
assert ctypes.alignment(scav_point) == 4
assert getattr(scav_point, "x").offset == 0
assert getattr(scav_point, "y").offset == 4

class scav_extent(ctypes.Structure):
    _fields_ = [
        ("w", ctypes.c_int32),
        ("h", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_extent) == 8, "scav_extent is not 8 bytes"
assert ctypes.alignment(scav_extent) == 4
assert getattr(scav_extent, "w").offset == 0
assert getattr(scav_extent, "h").offset == 4

class scav_rect(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_int32),
        ("y", ctypes.c_int32),
        ("w", ctypes.c_int32),
        ("h", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_rect) == 16, "scav_rect is not 16 bytes"
assert ctypes.alignment(scav_rect) == 4
assert getattr(scav_rect, "x").offset == 0
assert getattr(scav_rect, "y").offset == 4
assert getattr(scav_rect, "w").offset == 8
assert getattr(scav_rect, "h").offset == 12

class scav_pending(ctypes.Structure):
    _fields_ = [
        ("path", scav_span),
        ("from_doc", ctypes.c_uint32),
        ("stmt_row", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_pending) == 16, "scav_pending is not 16 bytes"
assert ctypes.alignment(scav_pending) == 4
assert getattr(scav_pending, "path").offset == 0
assert getattr(scav_pending, "from_doc").offset == 8
assert getattr(scav_pending, "stmt_row").offset == 12

class scav_diag(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_uint32),
        ("subject_kind", ctypes.c_uint32),
        ("subject_ordinal", ctypes.c_uint32),
        ("doc", ctypes.c_uint32),
        ("off", ctypes.c_uint32),
        ("len", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_diag) == 24, "scav_diag is not 24 bytes"
assert ctypes.alignment(scav_diag) == 4
assert getattr(scav_diag, "code").offset == 0
assert getattr(scav_diag, "subject_kind").offset == 4
assert getattr(scav_diag, "subject_ordinal").offset == 8
assert getattr(scav_diag, "doc").offset == 12
assert getattr(scav_diag, "off").offset == 16
assert getattr(scav_diag, "len").offset == 20

class scav_box_space(ctypes.Structure):
    _fields_ = [
        ("min_w", ctypes.c_int32),
        ("h_before", ctypes.c_int32),
        ("h_after", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_box_space) == 12, "scav_box_space is not 12 bytes"
assert ctypes.alignment(scav_box_space) == 4
assert getattr(scav_box_space, "min_w").offset == 0
assert getattr(scav_box_space, "h_before").offset == 4
assert getattr(scav_box_space, "h_after").offset == 8

class scav_path_clear(ctypes.Structure):
    _fields_ = [
        ("src", ctypes.c_int32),
        ("dst", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_path_clear) == 8, "scav_path_clear is not 8 bytes"
assert ctypes.alignment(scav_path_clear) == 4
assert getattr(scav_path_clear, "src").offset == 0
assert getattr(scav_path_clear, "dst").offset == 4

class scav_path_box(ctypes.Structure):
    _fields_ = [
        ("subject", ctypes.c_uint32),
        ("w", ctypes.c_int32),
        ("h", ctypes.c_int32),
        ("order", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_path_box) == 16, "scav_path_box is not 16 bytes"
assert ctypes.alignment(scav_path_box) == 4
assert getattr(scav_path_box, "subject").offset == 0
assert getattr(scav_path_box, "w").offset == 4
assert getattr(scav_path_box, "h").offset == 8
assert getattr(scav_path_box, "order").offset == 12

class scav_spaces(ctypes.Structure):
    _fields_ = [
        ("box_state", ctypes.POINTER(scav_box_space)),
        ("n_box_state", ctypes.c_uint32),
        ("box_sub", ctypes.POINTER(scav_box_space)),
        ("n_box_sub", ctypes.c_uint32),
        ("path_clear", ctypes.POINTER(scav_path_clear)),
        ("n_path_clear", ctypes.c_uint32),
        ("path_box", ctypes.POINTER(scav_path_box)),
        ("n_path_box", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_spaces) == 64, "scav_spaces is not 64 bytes"
assert ctypes.alignment(scav_spaces) == 8
assert getattr(scav_spaces, "box_state").offset == 0
assert getattr(scav_spaces, "n_box_state").offset == 8
assert getattr(scav_spaces, "box_sub").offset == 16
assert getattr(scav_spaces, "n_box_sub").offset == 24
assert getattr(scav_spaces, "path_clear").offset == 32
assert getattr(scav_spaces, "n_path_clear").offset == 40
assert getattr(scav_spaces, "path_box").offset == 48
assert getattr(scav_spaces, "n_path_box").offset == 56

class scav_profile(ctypes.Structure):
    _fields_ = [
        ("profile_id", ctypes.c_int32),
        ("profile_version", ctypes.c_int32),
        ("pad", ctypes.c_int32),
        ("font_size_grid", ctypes.c_int32),
        ("line_height_k_num", ctypes.c_int32),
        ("line_height_k_den", ctypes.c_int32),
        ("kind_min_w", ctypes.c_int32 * 9),
        ("kind_min_h", ctypes.c_int32 * 9),
        ("dar_num", ctypes.c_int32),
        ("dar_den", ctypes.c_int32),
        ("trybox", ctypes.c_int32),
        ("sm_tiebreak", ctypes.c_int32),
        ("w_bends", ctypes.c_int32),
        ("w_corridor", ctypes.c_int32),
        ("w_crossings", ctypes.c_int32),
        ("w_excess_len", ctypes.c_int32),
        ("w_adjacency", ctypes.c_int32),
        ("w_label", ctypes.c_int32),
        ("w_aspect", ctypes.c_int32),
        ("w_area", ctypes.c_int32),
        ("portfolio_k", ctypes.c_int32),
        ("sweep_count", ctypes.c_int32),
        ("congestion_iterations", ctypes.c_int32),
        ("ripup_cap", ctypes.c_int32),
        ("spacing_inflation_cap", ctypes.c_int32),
        ("spacing_inflation_increment", ctypes.c_int32),
        ("print_columns", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_profile) == 172, "scav_profile is not 172 bytes"
assert ctypes.alignment(scav_profile) == 4
assert getattr(scav_profile, "profile_id").offset == 0
assert getattr(scav_profile, "profile_version").offset == 4
assert getattr(scav_profile, "pad").offset == 8
assert getattr(scav_profile, "font_size_grid").offset == 12
assert getattr(scav_profile, "line_height_k_num").offset == 16
assert getattr(scav_profile, "line_height_k_den").offset == 20
assert getattr(scav_profile, "kind_min_w").offset == 24
assert getattr(scav_profile, "kind_min_h").offset == 60
assert getattr(scav_profile, "dar_num").offset == 96
assert getattr(scav_profile, "dar_den").offset == 100
assert getattr(scav_profile, "trybox").offset == 104
assert getattr(scav_profile, "sm_tiebreak").offset == 108
assert getattr(scav_profile, "w_bends").offset == 112
assert getattr(scav_profile, "w_corridor").offset == 116
assert getattr(scav_profile, "w_crossings").offset == 120
assert getattr(scav_profile, "w_excess_len").offset == 124
assert getattr(scav_profile, "w_adjacency").offset == 128
assert getattr(scav_profile, "w_label").offset == 132
assert getattr(scav_profile, "w_aspect").offset == 136
assert getattr(scav_profile, "w_area").offset == 140
assert getattr(scav_profile, "portfolio_k").offset == 144
assert getattr(scav_profile, "sweep_count").offset == 148
assert getattr(scav_profile, "congestion_iterations").offset == 152
assert getattr(scav_profile, "ripup_cap").offset == 156
assert getattr(scav_profile, "spacing_inflation_cap").offset == 160
assert getattr(scav_profile, "spacing_inflation_increment").offset == 164
assert getattr(scav_profile, "print_columns").offset == 168

class scav_port_slot(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_int32),
        ("y", ctypes.c_int32),
        ("side", ctypes.c_uint32),
        ("boundary_depth", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_port_slot) == 16, "scav_port_slot is not 16 bytes"
assert ctypes.alignment(scav_port_slot) == 4
assert getattr(scav_port_slot, "x").offset == 0
assert getattr(scav_port_slot, "y").offset == 4
assert getattr(scav_port_slot, "side").offset == 8
assert getattr(scav_port_slot, "boundary_depth").offset == 12

class scav_layout_opts(ctypes.Structure):
    _fields_ = [
        ("profile", scav_profile),
        ("router", scav_router_id),
        ("threads", ctypes.c_uint32),
    ]

assert ctypes.sizeof(scav_layout_opts) == 180, "scav_layout_opts is not 180 bytes"
assert ctypes.alignment(scav_layout_opts) == 4
assert getattr(scav_layout_opts, "profile").offset == 0
assert getattr(scav_layout_opts, "router").offset == 172
assert getattr(scav_layout_opts, "threads").offset == 176

class scav_style(ctypes.Structure):
    _fields_ = [
        ("stroke_rgba", ctypes.c_uint32),
        ("fill_rgba", ctypes.c_uint32),
        ("stroke_w", ctypes.c_int32),
        ("dash", ctypes.c_uint32),
        ("font_size_grid", ctypes.c_int32),
    ]

assert ctypes.sizeof(scav_style) == 20, "scav_style is not 20 bytes"
assert ctypes.alignment(scav_style) == 4
assert getattr(scav_style, "stroke_rgba").offset == 0
assert getattr(scav_style, "fill_rgba").offset == 4
assert getattr(scav_style, "stroke_w").offset == 8
assert getattr(scav_style, "dash").offset == 12
assert getattr(scav_style, "font_size_grid").offset == 16

class scav_prim(ctypes.Structure):
    _fields_ = [
        ("kind", ctypes.c_uint32),
        ("depth", ctypes.c_int32),
        ("style", ctypes.c_uint32),
        ("clip", ctypes.c_uint32),
        ("origin_kind", ctypes.c_uint32),
        ("origin_ordinal", ctypes.c_uint32),
        ("points", scav_span),
        ("payload", scav_span),
        ("a", ctypes.c_int32),
        ("b", ctypes.c_int32),
    ]
